--- a/ManagementSystem/Components/Layout/MainLayout.razor
+++ b/ManagementSystem/Components/Layout/MainLayout.razor
@@ -1,14 +1,10 @@
 ﻿@inherits LayoutComponentBase
-
-<div class="page d-block">
-    <div class="w-100 h-auto">
-        <NavMenu/>
-    </div>
-    <main>
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
+ 
+<div class="custom_sidebar">
+    <NavMenu/>
+</div>
+<div class="content_container">
+    @Body
 </div>
 
 <div id="blazor-error-ui">
