--- a/ManagementSystem/wwwroot/Styles/BtnStyles.css
+++ b/ManagementSystem/wwwroot/Styles/BtnStyles.css
@@ -23,6 +23,28 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
 }
 
+.btn_style_1_ot
+{
+    height: 40px;
+    align-self: stretch;
+    border-radius: 8px;
+    background: var(--lighter-color);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border: none;
+    font-size: 20px;
+    color: var(--darker-color);
+}
+
+.btn_style_1_ot:hover
+{
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.125);
+}
+
+.btn_style_1_ot:active
+{
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+}
+
 .btn_style_2
 {
     display: flex;
