--- a/ManagementSystem/wwwroot/Styles/MainStyles.css
+++ b/ManagementSystem/wwwroot/Styles/MainStyles.css
@@ -1,3 +1,14 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+input[type="text"] {
+    line-height: inherit; /* 1 */
+    margin: 0; /* 2 */
+}
+
 header
 {
     display: flex;
@@ -70,4 +81,101 @@ body
     padding: 10px;
     flex: 1 0 0;
     align-self: stretch;
+}
+
+/*emptyLayout*/
+.empty_layout
+{
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: wrap;
+    background: var(--darker-color-opasity);
+}
+
+.empty_layout-container
+{
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex: 1 0 0;
+    align-self: stretch;
+}
+
+.ctext-darker
+{
+    color: var(--darker-color);
+}
+
+.ctext-lighter
+{
+    color: var(--lighter-color);
+}
+
+/*login_form*/
+.login_form
+{
+    display: flex;
+    height: 315px;
+    padding: 20px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 20px;
+    border-radius: 8px;
+    background: var(--lighter-color-opasity);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.login_form-input_fields
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    align-self: stretch;
+}
+
+.login_form-input_field
+{
+    display: flex;
+    padding: 0px 0px 0px 10px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5px;
+}
+
+.login_form-input_field>input
+{   
+    min-width: 250px;
+    min-height: 25px;
+    border-radius: 8px;
+    padding: 5px;
+    border: 2px solid var(--darker-color);
+    background: var(--lighter-color-opasity);
+}
+
+.login_form-input_field>input:hover
+{
+    border: 2px solid var(--lighter-color);
+}
+
+.login_form-input_field>input:focus
+{
+    outline: 0;
+    border: 2px solid var(--darker-color);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.login_form-input_field > *
+{
+    color: var(--darker-color);
 }
