--- a/ManagementSystem/Components/App.razor
+++ b/ManagementSystem/Components/App.razor
@@ -1,24 +1,19 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
- 
+
 <head>
-    <title>ManagementSystem</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="/"/>
-    <link rel="stylesheet" href="Styles/MainStyles.css"/>
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css"/>
     <link rel="stylesheet" href="app.css"/>
-    <link rel="stylesheet" href="Styles/BtnStyles.css"/>
-    <link rel="stylesheet" href="Styles/Fonts.css"/>
-    <link rel="stylesheet" href="Styles/Colors.css"/>
-    @* <link rel="stylesheet" href="bootstrap/bootstrap.min.css"/> *@
     <link rel="stylesheet" href="ManagementSystem.styles.css"/>
     <link rel="icon" type="image/png" href="favicon.png"/>
     <HeadOutlet/>
 </head>
 
 <body>
-    <Routes/>
+<Routes/>
 <script src="_framework/blazor.web.js"></script>
 </body>
 
