--- a/ManagementSystem/Components/Layout/MainLayout.razor
+++ b/ManagementSystem/Components/Layout/MainLayout.razor
@@ -1,31 +1,19 @@
-﻿@using Database.UseCases
-@inherits LayoutComponentBase
- 
-<header> @* оно так работает, не хочет быть выше, видимо blazor так хочет, хз *@
-    <NavLink Match="NavLinkMatch.All" href="/">
-        ManagementSystem
-    </NavLink>
-    <div>
-        @if (!_isLogged)
-        {
-            <button class="btn_style_4">Sign In</button>
-            <button class="btn_style_4">Sign Up</button>
-        }
-        else
-        {
-            @* <b>@User_UseCases.GetCurrentUser()!.UserInfo.FirstName</b> *@
-            <button class="btn_style_4">Log Out</button>
-        }
-    </div>
-</header>
+﻿@inherits LayoutComponentBase
 
-<div class="body_container">
-    <div class="custom_sidebar">
+<div class="page">
+    <div class="sidebar">
         <NavMenu/>
     </div>
-    <div class="content_container">
-        @Body
-    </div>
+
+    <main>
+        <div class="top-row px-4">
+            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+        </div>
+
+        <article class="content px-4">
+            @Body
+        </article>
+    </main>
 </div>
 
 <div id="blazor-error-ui">
@@ -33,17 +21,3 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
-
-@code
-{
-    [Inject]
-    private HttpContext Context { get; set; } = default!;
-
-    private bool _isLogged = false;
-    
-    protected override void OnInitialized()
-    {
-        if (Context.Request.Cookies.ContainsKey("user-id"))
-            _isLogged = true;
-    }
-}
