--- a/ManagementSystem/Components/Pages/Counter.razor
+++ b/ManagementSystem/Components/Pages/Counter.razor
@@ -1,33 +1,13 @@
-﻿@page "/buttons"
+﻿@page "/counter"
 @rendermode InteractiveServer
- 
+
 <PageTitle>Counter</PageTitle>
 
 <h1>Counter</h1>
 
 <p role="status">Current count: @currentCount</p>
 
-<div style="
-            display: flex;
-            align-items: flex-start;
-            gap: 10px;
-            flex: 1 0 0;
-            align-self: stretch;">
-    
-    <div style="
-                display: flex;
-                padding: 20px;
-                flex-direction: column;
-                align-items: flex-start;
-                gap: 30px;
-                flex: 1 0 0;">
-        
-        <button class="btn_style_1" @onclick="IncrementCount" style="width: 280px;">Click me</button>
-        <button class="btn_style_2" @onclick="IncrementCount" style="width: 280px;">Click me</button>
-        <button class="btn_style_3" @onclick="IncrementCount" style="width: 280px;">Click me</button>
-        <button class="btn_style_4" @onclick="IncrementCount" style="width: 280px;">Click me</button>
-    </div>
-</div>
+<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
     private int currentCount = 0;
@@ -36,4 +16,5 @@
     {
         currentCount++;
     }
+
 }
