--- a/ManagementSystem/wwwroot/app.css
+++ b/ManagementSystem/wwwroot/app.css
@@ -1,4 +1,7 @@
- 
+html, body {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
 a, .btn-link {
     color: #006bb7;
 }
@@ -39,9 +42,9 @@ h1:focus {
     color: white;
 }
 
-.blazor-error-boundary::after {
-    content: "An error has occurred."
-}
+    .blazor-error-boundary::after {
+        content: "An error has occurred."
+    }
 
 .darker-border-checkbox.form-check-input {
     border-color: #929292;
