--- a/ManagementSystem/Components/Pages/Weather.razor
+++ b/ManagementSystem/Components/Pages/Weather.razor
@@ -1,16 +1,26 @@
 ﻿@page "/weather"
+@using Database.Data
+@using Database.Models.RoleModels
+@using Database.UseCases
+@using Microsoft.EntityFrameworkCore
 @attribute [StreamRendering]
-
+ 
 <PageTitle>Weather</PageTitle>
 
 <h1>Weather</h1>
 
 <p>This component demonstrates showing data.</p>
 
-@if (forecasts == null)
+@if (_roles == null)
 {
     <p>
         <em>Loading...</em>
+    </p>
+}
+else if (!_roles.Any())
+{
+    <p>
+        <em>Empty</em>
     </p>
 }
 else
@@ -18,20 +28,16 @@ else
     <table class="table">
         <thead>
         <tr>
-            <th>Date</th>
-            <th>Temp. (C)</th>
-            <th>Temp. (F)</th>
-            <th>Summary</th>
+            <th>Id</th>
+            <th>Name</th>
         </tr>
         </thead>
         <tbody>
-        @foreach (var forecast in forecasts)
+        @foreach (var role in _roles)
         {
             <tr>
-                <td>@forecast.Date.ToShortDateString()</td>
-                <td>@forecast.TemperatureC</td>
-                <td>@forecast.TemperatureF</td>
-                <td>@forecast.Summary</td>
+                <td>@role.Id</td>
+                <td>@role.RoleName</td>
             </tr>
         }
         </tbody>
@@ -39,29 +45,25 @@ else
 }
 
 @code {
-    private WeatherForecast[]? forecasts;
+
+    private IEnumerable<RoleModel>? _roles;
 
     protected override async Task OnInitializedAsync()
     {
-    // Simulate asynchronous loading to demonstrate streaming rendering
-        await Task.Delay(500);
-
-        var startDate = DateOnly.FromDateTime(DateTime.Now);
-        var summaries = new[] { "Freezing", "Bracing", "Chilly", "Cool", "Mild", "Warm", "Balmy", "Hot", "Sweltering", "Scorching" };
-        forecasts = Enumerable.Range(1, 5).Select(index => new WeatherForecast
-        {
-            Date = startDate.AddDays(index),
-            TemperatureC = Random.Shared.Next(-20, 55),
-            Summary = summaries[Random.Shared.Next(summaries.Length)]
-        }).ToArray();
+        await LoadRoles();
     }
 
-    private class WeatherForecast
+    private async Task LoadRoles()
     {
-        public DateOnly Date { get; set; }
-        public int TemperatureC { get; set; }
-        public string? Summary { get; set; }
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+        try
+        {
+            _roles = await Role_UseCases.GetRoles();
+        }
+        catch (Exception e)
+        {
+            Console.WriteLine(e);
+            _roles = new List<RoleModel>();
+        }
     }
 
 }
