--- a/ManagementSystem/Components/Layout/MainLayout.razor
+++ b/ManagementSystem/Components/Layout/MainLayout.razor
@@ -5,18 +5,18 @@
     <NavLink Match="NavLinkMatch.All" href="/">
         ManagementSystem
     </NavLink>
-    <div>
-        @if (!_isLogged)
-        {
-            <button class="btn_style_4">Sign In</button>
-            <button class="btn_style_4">Sign Up</button>
-        }
-        else
-        {
-            @* <b>@User_UseCases.GetCurrentUser()!.UserInfo.FirstName</b> *@
-            <button class="btn_style_4">Log Out</button>
-        }
-    </div>
+    @* <div> *@
+    @*     @if (!_isLogged) *@
+    @*     { *@
+    @*         <button class="btn_style_4">Sign In</button> *@
+    @*         <button class="btn_style_4">Sign Up</button> *@
+    @*     } *@
+    @*     else *@
+    @*     { *@
+    @*         $1$ <b>@User_UseCases.GetCurrentUser()!.UserInfo.FirstName</b> #1# *@
+    @*         <button class="btn_style_4">Log Out</button> *@
+    @*     } *@
+    @* </div> *@
 </header>
 
 <div class="body_container">
@@ -33,17 +33,3 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
-
-@code
-{
-    [Inject]
-    private HttpContext Context { get; set; } = default!;
-
-    private bool _isLogged = false;
-    
-    protected override void OnInitialized()
-    {
-        if (Context.Request.Cookies.ContainsKey("user-id"))
-            _isLogged = true;
-    }
-}
