--- a/ManagementSystem/Components/Layout/EmptyLayout.razor
+++ b/ManagementSystem/Components/Layout/EmptyLayout.razor
@@ -1,4 +1,6 @@
 @using Database.UseCases
 @inherits LayoutComponentBase
 
-@Body
+<div class="vw-100 vh-100 bg_darker justify-content-center align-items-center d-flex">
+    @Body
+</div>
