--- a/ManagementSystem/Components/App.razor
+++ b/ManagementSystem/Components/App.razor
@@ -6,12 +6,10 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="/"/>
-    <link rel="stylesheet" href="Styles/MainStyles.css"/>
+    <link rel="stylesheet" href="style/fonts.css"/>
     <link rel="stylesheet" href="app.css"/>
-    <link rel="stylesheet" href="Styles/BtnStyles.css"/>
-    <link rel="stylesheet" href="Styles/Fonts.css"/>
-    <link rel="stylesheet" href="Styles/Colors.css"/>
-    @* <link rel="stylesheet" href="bootstrap/bootstrap.min.css"/> *@
+    <link rel="stylesheet" href="style/colors.css"/>
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css"/>
     <link rel="stylesheet" href="ManagementSystem.styles.css"/>
     <link rel="icon" type="image/png" href="favicon.png"/>
     <HeadOutlet/>
