--- a/ManagementSystem/Components/Layout/NavMenu.razor
+++ b/ManagementSystem/Components/Layout/NavMenu.razor
@@ -1,7 +1,36 @@
-﻿<div class="navbar-custom_sidebar">
-    <div class="navbar_container-custom_sidebar">
-        <NavLink class="btn_style_1" Match="NavLinkMatch.All" href="/" >Home</NavLink>
-        <NavLink class="btn_style_1" Match="NavLinkMatch.All" href="/buttons">Counter</NavLink>
-        <NavLink class="btn_style_1" Match="NavLinkMatch.All" href="/weather">Weather</NavLink>
+﻿@* <div class="navbar-custom_sidebar"> *@
+@*     <div class="navbar_container-custom_sidebar"> *@
+@*         <NavLink class="btn_style_1" Match="NavLinkMatch.All" href="/" >Home</NavLink> *@
+@*         <NavLink class="btn_style_1" Match="NavLinkMatch.All" href="/buttons">Counter</NavLink> *@
+@*         <NavLink class="btn_style_1" Match="NavLinkMatch.All" href="/weather">Weather</NavLink> *@
+@*     </div> *@
+@* </div>  *@
+<div class="top-row ps-3 navbar navbar-dark">
+    <div class="container-fluid">
+        <NavLink Match="NavLinkMatch.All" href="" class="navbar-brand color_darker  ">ManagementSystem</NavLink>
     </div>
-</div> 
+</div>
+
+<input type="checkbox" title="Navigation menu" class="navbar-toggler"/>
+
+<div class="nav-scrollable color_darker" onclick="document.querySelector('.navbar-toggler').click()"> 
+    <nav class="flex-column">
+        <div class="nav-item px-3">
+            <NavLink class="nav-link fw-bold" href="" Match="NavLinkMatch.All">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link fw-bold" href="counter">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link fw-bold" href="weather">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            </NavLink>
+        </div>
+    </nav>
+</div>
