--- a/ManagementSystem/Components/_Imports.razor
+++ b/ManagementSystem/Components/_Imports.razor
@@ -5,6 +5,9 @@
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.JSInterop
 @using ManagementSystem
 @using ManagementSystem.Components
+@using ManagementSystem.Components.Layout
+@using ManagementSystem.Components.Pages
