--- a/ManagementSystem/Components/Pages/Auth/SignUp.razor
+++ b/ManagementSystem/Components/Pages/Auth/SignUp.razor
@@ -17,7 +17,7 @@
         }
         else
         {
-        <p role="status" class="text-danger m-2">@_message</p>
+            <p role="status" class="text-danger m-2">@_message</p>
         }
 
     }
@@ -87,11 +87,13 @@
             {
                 _message = "Success registration. Go to Sign In for Authenticate in App ";
                 _disabled = true;
+                _isSuccess = true;
             }
             else
             {
                 _message = "[KVAK] User was not created =( Maybe user with current login already exist";
                 _disabled = false;
+                _isSuccess = false;
             }
         }
         catch (Exception e)
