--- a/ManagementSystem/Components/Layout/NavMenu.razor
+++ b/ManagementSystem/Components/Layout/NavMenu.razor
@@ -21,16 +21,21 @@
             </NavLink>
         </div>
 
+        @* <div class="nav-item px-3"> *@
+        @*     <NavLink class="nav-link fw-bold" href="counter"> *@
+        @*         <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter *@
+        @*     </NavLink> *@
+        @* </div> *@
+        @* *@
+        @* <div class="nav-item px-3"> *@
+        @*     <NavLink class="nav-link fw-bold" href="weather"> *@
+        @*         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather *@
+        @*     </NavLink> *@
+        @* </div> *@
+        
         <div class="nav-item px-3">
-            <NavLink class="nav-link fw-bold" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
+            <NavLink class="nav-link fw-bold" href="/products">Products</NavLink>
         </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link fw-bold" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
+        
     </nav>
 </div>
