--- a/ManagementSystem/Components/Layout/NavMenu.razor
+++ b/ManagementSystem/Components/Layout/NavMenu.razor
@@ -20,7 +20,7 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-
+        <hr class="m-0 mb-2"/>
         @* <div class="nav-item px-3"> *@
         @*     <NavLink class="nav-link fw-bold" href="counter"> *@
         @*         <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter *@
@@ -34,7 +34,7 @@
         @* </div> *@
         
         <div class="nav-item px-3">
-            <NavLink class="nav-link fw-bold" href="/products">Products</NavLink>
+            <NavLink class="nav-link fw-bold justify-content-center" href="/products">Products</NavLink>
         </div>
         
     </nav>
