--- a/ManagementSystem/Components/App.razor
+++ b/ManagementSystem/Components/App.razor
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="app.css"/>
     <link rel="stylesheet" href="style/colors.css"/>
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="ManagementSystem.styles.css"/>
     <link rel="icon" type="image/png" href="favicon.png"/>
     <HeadOutlet/>
@@ -19,6 +20,10 @@
 <body>
     <Routes/>
 <script src="_framework/blazor.web.js"></script>
+<script src="js/bootstrap.js"></script>
+<script src="js/bootstrap.bundle.js"></script>
+<script src="js/bootstrap.esm.js"></script>
+
 </body>
 
 </html>
