--- a/ManagementSystem/Components/App.razor
+++ b/ManagementSystem/Components/App.razor
@@ -7,11 +7,11 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="/"/>
-    <link rel="stylesheet" href="style/fonts.css"/>
     <link rel="stylesheet" href="app.css"/>
+    <link rel="stylesheet" href="style/fonts.css"/>
     <link rel="stylesheet" href="style/colors.css"/>
+    <link rel="stylesheet" href="style/slider.css"/>
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="ManagementSystem.styles.css"/>
     <link rel="icon" type="image/png" href="favicon.png"/>
     <HeadOutlet/>
@@ -20,10 +20,7 @@
 <body>
     <Routes/>
 <script src="_framework/blazor.web.js"></script>
-<script src="js/bootstrap.js"></script>
-<script src="js/bootstrap.bundle.js"></script>
-<script src="js/bootstrap.esm.js"></script>
-
+<script src="js/slider.js"></script>
 </body>
 
 </html>
