--- a/ManagementSystem/ManagementSystem/App.axaml
+++ b/ManagementSystem/ManagementSystem/App.axaml
@@ -1,15 +1,23 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:ManagementSystem"
+             xmlns:themes="clr-namespace:Material.Styles.Themes;assembly=Material.Styles"
              x:Class="ManagementSystem.App"
              RequestedThemeVariant="Default">
-             <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
-    <Application.DataTemplates>
-        <local:ViewLocator/>
-    </Application.DataTemplates>
+             <Application.DataTemplates>
+                 <local:ViewLocator/>
+             </Application.DataTemplates>
 
-    <Application.Styles>
-        <FluentTheme />
-    </Application.Styles>
+             <Application.Styles>
+                 <themes:MaterialTheme BaseTheme="Light" PrimaryColor="Lime" SecondaryColor="Cyan" />
+             </Application.Styles>
+             
+             <Application.Resources>
+                 <ResourceDictionary>
+                     <ResourceDictionary.MergedDictionaries>
+                        <ResourceInclude Source="/Assets/Dictionaries/Colors.axaml"/>
+                     </ResourceDictionary.MergedDictionaries>
+                 </ResourceDictionary>
+             </Application.Resources>
 </Application>
