--- a/ManagementSystem/ManagementSystem/Views/AppView.axaml
+++ b/ManagementSystem/ManagementSystem/Views/AppView.axaml
@@ -3,39 +3,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:ManagementSystem.ViewModels"
-             xmlns:rxui="http://reactiveui.net" 
-             xmlns:app="clr-namespace:ManagementSystem"
+             xmlns:views="clr-namespace:ManagementSystem.Views"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="ManagementSystem.Views.AppView"
              x:DataType="vm:AppViewModel">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <rxui:RoutedViewHost Grid.Row="0" Router="{Binding Router}">
-            <rxui:RoutedViewHost.DefaultContent>
-                <TextBlock Text="Default content"
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center" />
-            </rxui:RoutedViewHost.DefaultContent>
-            <rxui:RoutedViewHost.ViewLocator>
-                <!-- See AppViewLocator.cs section below -->
-                <app:AppViewLocator />
-            </rxui:RoutedViewHost.ViewLocator>
-        </rxui:RoutedViewHost>
-        <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="15">
-            <StackPanel.Styles>
-                <Style Selector="StackPanel > :is(Control)">
-                    <Setter Property="Margin" Value="2"/>
-                </Style>
-                <Style Selector="StackPanel > TextBlock">
-                    <Setter Property="VerticalAlignment" Value="Center"/>
-                </Style>
-            </StackPanel.Styles>
-            <Button Content="Go next" Command="{Binding GoNext}" />
-            <Button Content="Go back" Command="{Binding GoBack}" />
-            <TextBlock Text="{Binding Router.NavigationStack.Count}" />
-        </StackPanel>
+        <ContentControl Content="{Binding NavigationService.CurrentViewModel}" IsVisible="{Binding NavigationService.CurrentViewModel, Converter={x:Static ObjectConverters.IsNotNull}}"/>
+        <ContentControl IsVisible="{Binding NavigationService.CurrentViewModel, Converter={x:Static ObjectConverters.IsNull}}">
+            <views:EmptyView></views:EmptyView>
+        </ContentControl>        
     </Grid>
 </UserControl>
