--- a/ManagementSystem/ManagementSystem/Views/AppWindow.axaml
+++ b/ManagementSystem/ManagementSystem/Views/AppWindow.axaml
@@ -4,7 +4,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:ManagementSystem.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="ManagementSystem.Views.AppWindow"
-        Title="AppWindow">
+        x:Class="ManagementSystem.Views.AppWindow">
         <views:AppView/>
 </Window>
